# sof-chargen-web

./: .gitignore  Cargo.toml  README.md  index.html  sof_chargen_web.js  sof_chargen_web_bg.wasm  sw.js
.github/workflows/: rust.yml
sof-chargen/: Cargo.toml
sof-chargen/src/: backend.rs  character.rs  data.rs  dice.rs  event.rs  ipc.rs  lib.rs  logger.rs
sof-chargen/src/data/: careers.rs  locations.rs  perks.rs
sof-chargen/src/event/: birth.rs  stages.rs  util.rs
src/: app.rs  backend.rs  char_sheet.rs  gui_event.rs  lib.rs  main.rs  save.rs  sidebar.rs  util.rs
src/app/: backend.rs  char_sheet.rs
