[package]
name = "sof_chargen_web"
version = "0.2.0"
edition = "2024"
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.86"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
sof-chargen = { path = "sof-chargen" }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { version = "0.13.1", features = ["advanced"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { version = "0.13.1", features = ["webgl", "advanced"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlElement", "Text", "Storage"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[profile.release]
opt-level = 2 # fast and small wasm


